[gd_scene load_steps=2 format=3 uid="uid://cu4f1n2lyfjua"]

[ext_resource type="Script" uid="uid://bvlrrflq2lm7f" path="res://lobby_prototype.gd" id="1_h5jyd"]

[node name="LobbyPrototype" type="Node3D"]
script = ExtResource("1_h5jyd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Persistent" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 50.0

[node name="LobbyID" type="Label" parent="CanvasLayer/Persistent"]
unique_name_in_owner = true
layout_mode = 2

[node name="LobbyMembers" type="Label" parent="CanvasLayer/Persistent"]
unique_name_in_owner = true
layout_mode = 2

[node name="CreateJoin" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.5
offset_right = 55.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Name" type="LineEdit" parent="CanvasLayer/CreateJoin"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name"

[node name="Create" type="Button" parent="CanvasLayer/CreateJoin"]
layout_mode = 2
text = "Create Lobby"

[node name="JoinID" type="LineEdit" parent="CanvasLayer/CreateJoin"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Lobby ID"

[node name="Join" type="Button" parent="CanvasLayer/CreateJoin"]
layout_mode = 2
text = "Join Lobby"

[node name="LobbyData" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="LobbyName" type="LineEdit" parent="CanvasLayer/LobbyData"]
unique_name_in_owner = true
layout_mode = 2

[node name="WorldSize" type="LineEdit" parent="CanvasLayer/LobbyData"]
unique_name_in_owner = true
layout_mode = 2

[node name="Started" type="CheckButton" parent="CanvasLayer/LobbyData"]
unique_name_in_owner = true
layout_mode = 2

[node name="Leave" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 105.0
grow_vertical = 0
text = "Leave Lobby"

[connection signal="pressed" from="CanvasLayer/CreateJoin/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="CanvasLayer/CreateJoin/Join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="CanvasLayer/LobbyData/LobbyName" to="." method="_on_lobby_name_text_submitted"]
[connection signal="text_submitted" from="CanvasLayer/LobbyData/WorldSize" to="." method="_on_world_size_text_submitted"]
[connection signal="toggled" from="CanvasLayer/LobbyData/Started" to="." method="_on_started_toggled"]
[connection signal="pressed" from="CanvasLayer/Leave" to="." method="_on_leave_pressed"]
